--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "dependencies": {
     "axios": "^0.21.1",
     "better-scroll": "^2.2.0",
+    "blueimp-md5": "^2.18.0",
     "core-js": "^3.6.5",
+    "element-plus": "^1.0.2-beta.32",
+    "element-ui": "^2.15.1",
     "swiper": "^6.4.15",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
@@ -18,6 +21,10 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.0",
     "@vue/cli-service": "^4.5.0",
+    "node-sass": "^4.9.2",
+    "sass-loader": "^7.0.3",
+    "vue-cli-plugin-element": "^1.0.1",
+    "vue-loader": "^14.2.4",
     "vue-template-compiler": "^2.6.11"
   }
 }
